# ic2P2ramp

./: .gitignore  LICENSE  README.md  canister_ids.json  deploy.sh  dfx.json  package-lock.json  package.json  vite.config.ts
backend/: Cargo.toml  README.md  backend.did
backend/src/: errors.rs  evm_rpc.rs  evm_signer.rs  evm_vault.rs  lib.rs  order_management.rs  state.rs  storage.rs  verifier.rs
backend/src/evm/: estimate_gas.rs  event.rs  fees.rs  helper.rs  helpers.rs  mod.rs  providers.rs  rpc.rs  signer.rs  transaction.rs  vault.rs
backend/src/icp/: vault.rs
backend/src/management/: mod.rs  order.rs  payment.rs  random.rs  user.rs  vault.rs
backend/src/model/: errors.rs  guards.rs  helpers.rs  mod.rs
backend/src/model/memory/heap/: heap.rs  init.rs  logs.rs  mod.rs  rate.rs  state.rs  storage.rs  upgrade.rs
backend/src/model/memory/stable/: mod.rs  (+4 more)
backend/src/model/state/: init.rs  mod.rs  state.rs  storage.rs  upgrade.rs
backend/src/model/types/: blockchain.rs  chains.rs  common.rs  exchange_rate.rs  gas.rs  icp.rs  mod.rs  order.rs  paypal.rs  revolut.rs  session.rs  user.rs
backend/src/order/: management.rs
backend/src/outcalls/: mod.rs  paypal_auth.rs  paypal_capture.rs  paypal_order.rs  revolut_auth.rs  revolut_transaction.rs  xrc_rates.rs
backend/src/outcalls/paypal/: auth.rs  mod.rs  order.rs
backend/src/outcalls/revolut/: auth.rs  authorize.rs  consent.rs  jws.rs  mod.rs  pay.rs  token.rs  transaction.rs
backend/src/state/: chains.rs  common.rs  init.rs  mod.rs  order.rs  paypal.rs  revolut.rs  state.rs  storage.rs  user.rs
(+86 files in other folders)
