[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.14"
ic-stable-structures = "0.6"
ic-cdk-timers = "0.7"
icrc-ledger-types = "0.1.6"
serde = "1.0.193"
serde_bytes = "0.11.12"
serde_json = "1.0.117"
ethers-core = "2.0.14"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4.3"
base64 = "0.22.1"
thiserror = "1.0"
futures = "0.3"
email_address = "0.2.5"
rsa = "0.6"
sha2 = "0.10"
rand = "0.8"
num-traits = "0.2.19"
pbkdf2 = { version="0.12.2", features = ["simple"] }
evm-rpc-canister-types = "3.0.0"
